--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,12 @@
       <version>1.3.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>4.1.1</version>
+    </dependency>
+
   </dependencies>
 
 </project>
