--- a/src/main/resources/database/jdbc.properties
+++ b/src/main/resources/database/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc_driverClass=com.mysql.jdbc.Driver
 jdbc_username=root
-jdbc_password=root
+jdbc_password=123456
 jdbc_url=jdbc:mysql://localhost:3306/ssm?characterEncoding=utf8&useSSL=true
 validationQuery=SELECT 1
