--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,11 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.1</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
 
     <dependency>
       <groupId>com.github.pagehelper</groupId>
