--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+    http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    <absolute-ordering />
+
   <display-name>Archetype Created Web Application</display-name>
 
   <!-- 防止中文参数乱码 放在前面 -->
@@ -18,6 +20,7 @@
       <param-value>true</param-value>
       <!-- 强制进行转码 -->
     </init-param>
+      <async-supported>true</async-supported>
   </filter>
   <filter-mapping>
     <filter-name>SetCharacterEncoding</filter-name>
@@ -32,6 +35,7 @@
       <param-name>exclusions</param-name>
       <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*</param-value>
     </init-param>
+      <async-supported>true</async-supported>
   </filter>
   <filter-mapping>
     <filter-name>DruidWebStatFilter</filter-name>
@@ -65,6 +69,7 @@
       <param-value>classpath:/config/spring-servlet.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
+      <async-supported>true</async-supported>
   </servlet>
 
   <servlet-mapping>
@@ -78,8 +83,10 @@
   <servlet>
     <servlet-name>DruidStatView</servlet-name>
     <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+      <async-supported>true</async-supported>
   </servlet>
   <servlet-mapping>
+
     <servlet-name>DruidStatView</servlet-name>
     <url-pattern>/druid/*</url-pattern>
   </servlet-mapping>
